# EcoGround

./: .gitignore  README.md
src/galva_control/: CMakeLists.txt  package.xml
src/galva_control/include/: LightCal.hpp  control_cmd.h
src/galva_control/script/: SlidePlatform.py  cuavp9_ground.py  cuavp9_sky.py  light_node.py  slide_platform_node.py  sp_ros_wapper.py  test.py
src/galva_control/src/: LightControlNode.cpp  cuavp9_sky.cpp
